--- a/roles/base_custom/tasks/main.yml
+++ b/roles/base_custom/tasks/main.yml
@@ -22,7 +22,7 @@
   lineinfile:
     dest: /etc/sudoers
     regexp: "<user> ALL"
-    line: "ltdan ALL=(ALL) NOPASSWD:ALL"
+    line: "<user> ALL=(ALL) NOPASSWD:ALL"
     state: present
 
 # SSHD configuration
